testsuite/tests/parser/should_fail/readFail003.stderr

readFail003.hs:4:27: error:
    Occurs check: cannot construct the infinite type:
      t0 ~ (t0, [a0], [a1])
    Relevant bindings include
      a :: t0 (bound at readFail003.hs:4:3)
      b :: [a0] (bound at readFail003.hs:4:5)
      c :: [a1] (bound at readFail003.hs:4:7)
    In the expression: a
    In a pattern binding:
      ~(a, b, c)
        | nullity b = a
        | nullity c = a
        | otherwise = a
        where
            nullity = null
